<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yan.tablelayout.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingTop="2pt"
        android:stretchColumns="1">

        <TableRow android:paddingLeft="10pt">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Open"
                android:textColor="@color/white"
                android:textSize="12pt" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="75pt"
            android:text="@string/O"
            android:textColor="@color/white"
            android:textSize="12pt" />
        </TableRow>

        <TableRow android:paddingLeft="10pt">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textColor="@color/white"
                android:textSize="12pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="75pt"
                android:text="@string/S"
                android:textColor="@color/white"
                android:textSize="12pt" />
        </TableRow>

        <TableRow android:paddingLeft="10pt">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Saveas"
                android:textColor="@color/white"
                android:textSize="12pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="46pt"
                android:text="@string/Sa"
                android:textColor="@color/white"
                android:textSize="12pt" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2pt"
            android:layout_marginTop="2pt"
            android:background="@color/gray" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Import"
                android:textColor="@color/white"
                android:textSize="12pt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Export"
                android:textColor="@color/white"
                android:textSize="12pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="84pt"
                android:text="@string/E"
                android:textColor="@color/white"
                android:textSize="12pt" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2pt"
            android:layout_marginTop="2pt"
            android:background="@color/gray" />
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quit"
                android:textColor="@color/white"
                android:textSize="12pt"
                android:paddingLeft="10pt"/>
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
